# makestack-shell

./: .gitignore  CLAUDE.md  Dockerfile  HETZNER.md  LICENSE  README.md  docker-compose.dev.yml  docker-compose.hetzner.yml  docker-compose.yml  pyproject.toml
backend/: requirements.txt
backend/app/: __init__.py  constants.py  core_client.py  dependencies.py  log_broadcast.py  main.py  models.py  module_loader.py  module_manifest.py  package_cache.py  package_manifest.py  registry_client.py  userdb.py
backend/sdk/: __init__.py  catalogue_client.py  config.py  context.py  logger.py  peers.py  testing.py  userdb.py
backend/tests/: __init__.py  conftest.py  test_app_mode.py  test_backups.py  test_catalogue_routes.py  test_core_client.py  test_e2e.py  test_installers.py  test_inventory_routes.py  test_mcp_log.py  test_mcp_server.py  test_module_loader.py  test_module_manifest.py  test_module_sdk.py  test_module_views_route.py  test_package_cache.py  test_package_manifest.py  test_packages_routes.py  test_phase10.py  test_registry_client.py  test_terminal.py  test_userdb.py  test_users_routes.py  test_version_routes.py  test_workshop_modules.py  test_workshops_routes.py
cli/: __init__.py  main.py
cli/commands/: data.py  mcp.py
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: kitchen.spec.ts
makestack_sdk/: __init__.py  catalogue_client.py  config.py  context.py  logger.py  peers.py  testing.py  userdb.py
mcp_server/: __init__.py  __main__.py  auth.py  server.py  tool_generator.py  transport.py
(+161 files in other folders)
