[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "makestack-app"
version = "0.1.0"
description = "Makestack Shell — host application and API server"
requires-python = ">=3.10"
license = {file = "LICENSE"}
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.6.0",
    "structlog>=24.1.0",
    "mcp>=1.0.0",
    "click>=8.1.0",
]

[project.scripts]
makestack = "cli.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
pythonpath = ["."]

[tool.hatch.build.targets.wheel]
packages = ["backend", "makestack_sdk", "cli", "mcp_server"]
